# autorec

./: .gitignore  Cargo.toml  README.md  TODO  autorec.toml  shell.nix
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx
frontend/src/App/: AppContext.tsx  State.ts
nix/: sources.json
src/: app.rs  args.rs  config.rs  main.rs  midi.rs  player.rs  player2.rs  recorder.rs  server.rs  state.rs  store.rs
src/midi/: alsa_backend.rs
templates/: main.html.liquid
