[package]
name = "autorec"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2021"

[dependencies]
color-eyre = "0.6.1"
futures-util = "0.3.21"
tokio = { version = "1.18.2", features = ["full"] }
tokio-udev = "0.8.0"
tokio-util = { version = "0.7.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
