[package]
name = "autorec"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2021"

[dependencies]
alsa = "0.6.0"
axum = "0.5.5"
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock"] }
clap = { version = "3.1.18", features = ["derive"] }
color-eyre = "0.6.1"
futures-util = "0.3.21"
liquid = "0.26.0"
midly = "0.5.2"
nix = "0.24.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
