[package]
name = "autorec"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2021"

[dependencies]
alsa = "0.6.0"
async-stream = "0.3.3"
axum = { version = "0.5.5", features = ["ws"] }
axum-macros = "0.2.3"
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "3.1.18", features = ["derive"] }
color-eyre = "0.6.1"
futures-util = "0.3.21"
lazy_static = "1.4.0"
midly = "0.5.2"
nix = "0.24.1"
ordered-float = "3.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.6.0", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "chrono", "migrate", "macros"] }
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = "0.1.9"
tokio-util = { version = "0.7.2", features = ["full"] }
toml = "0.5.9"
tower-http = { version = "0.3.4", features = ["fs", "trace"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
zstd = "0.11.2"
